--- a/styles/button.module.css
+++ b/styles/button.module.css
@@ -8,4 +8,5 @@
 
 .option {
   @apply px-2 py-4 w-full flex items-center justify-between border-2 border-gray-200 rounded-md; 
+  --bg-color: theme('colors.gray.200');
 }
